--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Olá, mundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim unde voluptatem ea voluptas? Facere, odio. Repellendus consequuntur a recusandae, saepe iusto expedita vero numquam molestiae aperiam nemo soluta dolorem culpa?</p>   
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae amet tempore molestias ea atque quia ipsam, sapiente nulla corrupti quae debitis repellat! Sit porro nobis quae qui. Similique, harum sint!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium veritatis voluptas itaque nobis optio odio iusto placeat dolores ducimus rem? Atque ex blanditiis obcaecati nemo autem sit perspiciatis explicabo cupiditate!</p>   
 </body>
 </html>
